2008-10-28  Michael Natterer  <mitch@imendio.com>

	* gdk/keyname-table.h: fix small typo.

2008-10-27  Richard Hult  <richard@imendio.com>

	Bug 557894 – Wrong return value for
	gdk_pointer_grab_info_libgtk_only()

	* gdk/quartz/gdkevents-quartz.c:
	(gdk_pointer_grab_info_libgtk_only): Return TRUE when there is a
	pointer grab. Patch by Owen Taylor.

2008-10-2r76  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolshell.c:
	* gtk/gtktoolitem.c: Remove markup from short descriptions.

2008-10-26  Matthias Clasen  <mclasen@redhat.com>

	* gdk/keyname-table.h:
	* gtk/gen-paper-names.c:
	* gtk/paper_names_offsets.c:
	* gtk/gtkpapersize.c:
	* gtk/gtkaccellabel.c:
	* gtk/gtkprintoperation.c:
	* gtk/gtkstock.c: More conversion to C_().

2008-10-26  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkaccellabel.c:
	* gtk/gtkcalendar.c:
	* gtk/gtkcellrendereraccel.c:
	* gtk/gtkcellrendererprogress.c:
	* gtk/gtkimmulticontext.c:
	* gtk/gtkrecentchoosermenu.c:
	* gtk/gtkvolumebutton.c: Use C_() instead of Q_(). String change!

2008-10-26  Christian Persch  <chpe@gnome.org>

	Bug 557065 – gtkcellrendererpixbuf spams console over and over with
	'could not load image' warnings

	* gtk/gtkcellrendererpixbuf.c:
	(gtk_cell_renderer_pixbuf_create_themed_pixbuf): Remove noisy
	g_warning.

2008-10-26  Philip Withnall  <philip@tecnocode.co.uk>

	Bug 530454 – Clarify page_nr when printing

	* gtk/gtkprintoperation.c (gtk_print_operation_class_init): Point out
	that page_nr is 0-based in the documentation.

2008-10-25  Matthias Clasen  <mclasen@redhat.com>
	
	Bug 557315 – stale clipboard target cache

	* gtk/gtkclipboard.c (gtk_clipboard_set_contents): Remove cached
	targets. Pointed out by Evan Stade

2008-10-24  Tristan Van Berkom  <tvb@gnome.org>

	* gtk/gtkwidget.c: Added a note about GtkWidget:has-tooltip in
	the docs for GtkWidget::query-tooltip.

2008-10-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmountoperation.c: The "screen" property ought to have